--- a/Fekrah/API/ClientApp/src/app/Shared/layout/pre-navbar/pre-navbar.component.html
+++ b/Fekrah/API/ClientApp/src/app/Shared/layout/pre-navbar/pre-navbar.component.html
@@ -10,14 +10,13 @@
       </div>
 
       <div class="pre-nav-links">
-        <a routerLink="/merchant/dashboard" [class.active]="isActiveRoute('/merchant/dashboard')" class="pre-nav-link"
-          (click)="navigateToMerchantDashboard()">
+        <a routerLink="/dashboard/super" [class.active]="isActiveRoute('/dashboard/super')" class="pre-nav-link">
           <i class="fas fa-tachometer-alt"></i>
           <span>لوحة التحكم</span>
         </a>
 
         <a routerLink="/order-mgr/merchant-orders" [class.active]="isActiveRoute('/order-mgr/merchant-orders')"
-          class="pre-nav-link" >
+          class="pre-nav-link">
           <i class="fas fa-clipboard-list"></i>
           <span>الطلبات</span>
           <span class="pre-nav-badge animate__animated animate__pulse" *ngIf="pendingOrdersCount > 0">
@@ -25,8 +24,7 @@
           </span>
         </a>
 
-        <a routerLink="/merchant/products" [class.active]="isActiveRoute('/merchant/products')" class="pre-nav-link"
-          (click)="navigateToMerchantProducts()">
+        <a routerLink="/dashboard/merchant" [class.active]="isActiveRoute('/dashboard/merchant')" class="pre-nav-link">
           <i class="fas fa-box"></i>
           <span>المنتجات</span>
         </a>
